# eidolon

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE.txt  README.md  docker-compose.yml  pyproject.toml
eidolon/: cli.py
eidolon/api/: app.py  dependencies.py
eidolon/api/handlers/: tasks.py
eidolon/api/middleware/: auth.py  rate_limit.py
eidolon/api/routes/: agent.py  approvals.py  audit.py  chat.py  collector.py  graph.py  ingest.py  permissions.py  plan.py  query.py  settings.py
eidolon/collectors/: base.py  factory.py  manager.py  network.py
eidolon/config/: settings.py
eidolon/core/: stores.py
eidolon/core/graph/: algorithms.py  neo4j.py  repository.py
eidolon/core/models/: approval.py  asset.py  chat.py  event.py  graph.py  plan.py  scanner.py  settings.py
eidolon/core/reasoning/: entity.py  llm.py  memory.py  planner.py  prompts.py
eidolon/db/neo4j/: schema.cypher
eidolon/db/postgres/: schema.sql  store.py
eidolon/runtime/: agent.py  assistant.py  executor.py  sandbox.py  task_events.py
eidolon/runtime/tools/: base.py  browser.py  file_edit.py  finish.py  graph_query.py  terminal.py  thinking.py  todo.py
eidolon/tests/: conftest.py  test_algorithms.py  test_api_plan.py  test_api_query.py  test_collector_route.py  test_entity_resolution.py  test_graph_repository.py  test_graph_routes.py  test_ingest_route.py
eidolon/ui/: Dockerfile  index.html  package-lock.json  package.json
eidolon/ui/src/: App.tsx  api.ts  styles.css
eidolon/ui/src/components/: ChatInterface.tsx  DeviceList.tsx  EventLog.tsx  GraphView.tsx  NetworkList.tsx  NetworkMap.tsx  PolicyList.tsx  RightPanel.tsx  ScannerControl.tsx  SettingsPanel.tsx  Sidebar.tsx  StatsRow.tsx  Toast.tsx
eidolon/worker/: ingest.py  retention.py
scripts/: dev.ps1  dev.sh
